RESULTS/AutoSpec/raw_results/out-4o-nla/9_0002/9_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/9_0002/9_merged.c:16:60: error: unterminated comment
   16 |   loop invariant x == (z^(c-1)) + (z^(c-2)) + ... + z + 1; /* represents the sum of the geometric series up to c terms */;
      |                                                            ^
